@@ -222,7 +222,7 @@ func (l *CheckDrivesize) addDiskDetails(check *CheckData, drive map[string]strin
 	drive["free_pct"] = fmt.Sprintf("%f", freePct)
 
 	// check filter before adding metrics
-	if !check.MatchMapCondition(check.filter, drive) {
+	if !check.MatchMapCondition(check.filter, drive, true) {
 		return
 	}
 
@@ -284,7 +284,7 @@ func (l *CheckDrivesize) addTotal(check *CheckData) {
 	check.listData = append(check.listData, drive)
 
 	// check filter before adding metrics
-	if !check.MatchMapCondition(check.filter, drive) {
+	if !check.MatchMapCondition(check.filter, drive, true) {
 		return
 	}
 
